--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,12 @@ exclude = [
 [dependencies]
 cortex-m = "0.7.5"
 stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc"], default-features = false }
-display-interface = "0.5.0" # TODO: feature flag
+display-interface = { version = "0.5.0", optional = true }
 embedded-hal = "1.0"
+
+[features]
+default = []
+display = ["display-interface"]
 
 [dev-dependencies]
 panic-halt = "1.0.0"
@@ -33,3 +37,7 @@ embedded-graphics = "0.8.1"
 [build-dependencies]
 cc = "1.0.28"
 bindgen = { version = "0.70.1", features = ["experimental"] }
+
+[[example]]
+name = "lcd"
+required-features = ["display"]
