--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/RoccoDev/alarmo-rs"
 keywords = ["stm32h7xx", "stm32", "nintendo", "embedded-devices", "cortex-m"]
 categories = ["embedded", "hardware-support", "no-std"]
-exclude = [
-    "/.vscode", 
-    "/.github", 
-    "/STM32CubeH7", 
-    "!/STM32CubeH7/Drivers/STM32H7xx_HAL_Driver/Src",
-    "!/STM32CubeH7/Drivers/CMSIS/Include",
-    "!/STM32CubeH7/Drivers/CMSIS/Device/ST/STM32H7xx/Include",
-    "!/STM32CubeH7/Drivers/STM32H7xx_HAL_Driver/Inc"
-]
+exclude = ["/.vscode", "/.github"]
 
 [dependencies]
 cortex-m = "0.7.5"
