--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alarmo"
-version = "0.0.2"
+version = "0.0.3"
 description = "Provides a convenient API to bootstrap firmware and access peripherals on the Nintendo Alarmo"
 authors = ["RoccoDev <hey@rocco.dev>"]
 edition = "2021"
@@ -10,15 +10,21 @@ keywords = ["stm32h7xx", "stm32", "nintendo", "embedded-devices", "cortex-m"]
 categories = ["embedded", "hardware-support", "no-std"]
 exclude = ["/.vscode", "/.github"]
 
+[package.metadata.docs.rs]
+all-features = true
+targets = ["thumbv7em-none-eabihf"]
+
 [dependencies]
 cortex-m = "0.7.5"
 stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc"], default-features = false }
 display-interface = { version = "0.5.0", optional = true }
 embedded-hal = "1.0"
+embedded-alloc = { version = "0.6.0", optional = true }
 
 [features]
 default = []
 display = ["display-interface"]
+alloc = ["embedded-alloc", "cortex-m/critical-section-single-core"]
 
 [dev-dependencies]
 panic-halt = "1.0.0"
@@ -33,3 +39,7 @@ bindgen = { version = "0.70.1", features = ["experimental"] }
 [[example]]
 name = "lcd"
 required-features = ["display"]
+
+[[example]]
+name = "alloc"
+required-features = ["alloc", "display"]
