--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "alarmo"
-version = "0.0.3"
+version = "0.0.4"
 description = "Provides a convenient API to bootstrap firmware and access peripherals on the Nintendo Alarmo"
 authors = ["RoccoDev <hey@rocco.dev>"]
 edition = "2021"
@@ -16,6 +16,7 @@ targets = ["thumbv7em-none-eabihf"]
 
 [dependencies]
 cortex-m = "0.7.5"
+cortex-m-rt = "0.7.5"
 stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc"], default-features = false }
 display-interface = { version = "0.5.0", optional = true }
 embedded-hal = "1.0"
@@ -31,10 +32,6 @@ panic-halt = "1.0.0"
 panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
 mipidsi = "0.8.0"
 embedded-graphics = "0.8.1"
-
-[build-dependencies]
-cc = "1.0.28"
-bindgen = { version = "0.70.1", features = ["experimental"] }
 
 [[example]]
 name = "lcd"
