--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ targets = ["thumbv7em-none-eabihf"]
 
 [dependencies]
 cortex-m = "0.7.5"
-cortex-m-rt = "0.7.5"
-stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc"], default-features = false }
+cortex-m-rt = { version = "0.7.5", features = ["set-vtor", "set-sp", "zero-init-ram"] }
+stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc", "rt"] }
 display-interface = { version = "0.5.0", optional = true }
 embedded-hal = "1.0"
 embedded-alloc = { version = "0.6.0", optional = true }
