--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ cortex-m = "0.7.5"
 cortex-m-rt = { version = "0.7.5", features = ["set-vtor", "set-sp", "zero-init-ram"] }
 stm32h7xx-hal = { version = "0.16.0", features = ["stm32h735", "fmc", "rt"] }
 embedded-hal = "1.0"
+micromath = "2.1.0"
 display-interface = { version = "0.5.0", optional = true }
 embedded-alloc = { version = "0.6.0", optional = true }
 mipidsi = { version = "0.8.0", optional = true }
